[package]
name = "ztp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.11.9"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztd"
